--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -617,53 +617,53 @@ section {
 
 /* Get Started Section
 --------------------------------*/
-#about {
+#getstarted {
   padding: 80px 0;
   background-color: var(--dark-hover);
-  background-image: url("../img/about-image.jpg");
+  background-image: url("../img/getstarted-image.jpg");
   background-blend-mode: multiply;
   background-size: cover;
 }
 
-#about .about-img {
+#getstarted .getstarted-img {
   overflow: hidden;
   transition: all 0.4s ease-in-out;
 }
 
-#about .about-img img {
+#getstarted .getstarted-img img {
   max-width: 90%;
   height: 50%;
 }
 
-#about span {
+#getstarted span {
   color: var(--primary-hover);
 }
 
-#about .about-content {
+#getstarted .getstarted-content {
   /* background: var(--dark); */
   transition: all 0.4s ease-in-out;
 }
 
-#about .about-title {
+#getstarted .getstarted-title {
   font-weight: 700;
   font-size: 62px;
 }
 
-#about .about-text {
+#getstarted .getstarted-text {
   line-height: 26px;
   margin-bottom: 15px;
 }
 
-#about .about-text:last-child {
+#getstarted .getstarted-text:last-child {
   margin-bottom: 0;
 }
 
 @media (max-width: 768px) {
-  #about .about-img {
+  #getstarted .getstarted-img {
     height: auto;
   }
 
-  #about .about-img img {
+  #getstarted .getstarted-img img {
     margin-left: 0;
     padding-bottom: 30px;
   }
@@ -810,3 +810,193 @@ section {
     .recent-blog-posts .post-box:hover .post-img img {
       transform: rotate(6deg) scale(1.2);
     }
+
+    /*--------------------------------------------------------------
+    # Store
+    --------------------------------------------------------------*/
+        .store {
+          padding: 40px 0 0 0;
+          /* background: #F5EFE6; */
+        }
+    
+        .store img {
+          max-width: 50%;
+          border-radius: 20px;
+          /* border: 1px solid var(--white) */
+          /* box-shadow: var(--dark-hover) 0rem 1rem 2.5rem 0.25rem; */
+        }
+    
+        .store .nav-tabs {
+          border: 0;
+        }
+    
+        .store .nav-link {
+          background: var(--dark-hover) !important;
+          border: 0;
+          padding: 20px;
+          color: #151515;
+          transition: 0.3s;
+        }
+    
+        .store .nav-link h4 {
+          font-size: 18px;
+          font-weight: 600;
+          transition: 0.3s;
+        }
+    
+        .store .nav-link:hover h4 {
+          color: var(--primary-hover);
+        }
+    
+        .store .nav-link p {
+          font-size: 14px;
+          margin-bottom: 0;
+        }
+    
+        .store .nav-link.active {
+          box-shadow: 0px 0 25px rgba(0, 0, 0, 0.08);
+        }
+    
+        .store .nav-link.active h4 {
+          color: var(--primary-hover);
+        }
+    
+        .store .tab-pane.active {
+          -webkit-animation: slide-down 0.5s ease-out;
+          animation: slide-down 0.5s ease-out;
+        }
+    
+        @-webkit-keyframes slide-down {
+          0% {
+            opacity: 0;
+          }
+    
+          100% {
+            opacity: 1;
+          }
+        }
+    
+        @keyframes slide-down {
+          0% {
+            opacity: 0;
+          }
+    
+          100% {
+            opacity: 1;
+          }
+        }
+
+/*--------------------------------------------------------------
+# Frequently Asked Questions
+--------------------------------------------------------------*/
+.faq .section-title h2,
+.faq .section-title p {
+  color: var(--white);
+}
+
+.faq .section-title h2::after {
+  background: rgba(255, 255, 255, 0.6);
+}
+
+.faq .faq-list {
+  padding: 0 100px;
+}
+
+.faq .faq-list ul {
+  padding: 0;
+  list-style: none;
+}
+
+.faq .faq-list li+li {
+  margin-top: 15px;
+}
+
+.faq .faq-list li {
+  padding: 30px;
+  background: var(--dark-hover);
+  border-radius: 5px;
+  position: relative;
+}
+
+.faq .faq-list a {
+  display: block;
+  position: relative;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 500;
+  padding: 0 30px;
+  outline: none;
+  cursor: pointer;
+}
+
+.faq .faq-list .icon-help {
+  font-size: 24px;
+  position: absolute;
+  right: 0;
+  left: 20px;
+  color: var(--primary-hover);
+}
+
+.faq .faq-list .icon-show,
+.faq .faq-list .icon-close {
+  font-size: 24px;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.faq .faq-list p {
+  margin-bottom: 0;
+  padding: 10px 0 0 0;
+}
+
+.faq .faq-list .icon-show {
+  display: none;
+}
+
+.faq .faq-list a.collapsed {
+  color: var(--white);
+}
+
+.faq .faq-list a.collapsed:hover {
+  color: var(--primary-hover);
+}
+
+.faq .faq-list a.collapsed .icon-show {
+  display: inline-block;
+}
+
+.faq .faq-list a.collapsed .icon-close {
+  display: none;
+}
+
+@media (max-width: 1200px) {
+  .faq .faq-list {
+    padding: 0;
+  }
+}
+
+/*--------------------------------------------------------------
+# Footer
+--------------------------------------------------------------*/
+#footer {
+  background: #111;
+  padding: 30px 0;
+  color: #fff;
+}
+
+#footer .copyright {
+  text-align: center;
+}
+
+#footer .credits {
+  padding-top: 10px;
+  text-align: center;
+  font-size: 13px;
+  color: #ccc;
+}
+
+.heart {
+  color: var(--primary-hover);
+}
